--- a/index.css
+++ b/index.css
@@ -42,3 +42,23 @@
   font-style: italic;
   font-weight: 900;
 }
+
+.resetButton {
+  width: 150px;
+  height: 50px;
+  border-radius:30px ;
+  margin: auto;
+  margin-top: 10px;
+  margin: 30px;
+}
+
+.line{
+  position: absolute;
+  background-color: transparent;
+  left:10px;
+  height: 10px;
+  width: 320px;
+  border-radius: 10px;
+  z-index: +1;
+  margin-top:45px;
+}
